cmake_minimum_required(VERSION 3.10)

# set
set(NNKIT_SOURCE)
set(NNKIT_OBJECT)
set(NNKIT_TARGET nndemo_leetcode)
set(NNKIT_DIRECTORY nndemo)
set(NNKIT_DEPEND_LIBRARY)
set(NNKIT_SYSTEM_LIBRARY)
set(NNKIT_THIRD_PARTY_LIBRARY)

include_directories(${ROOT_PATH})
message(STATUS ${ROOT_PATH})

# NNKIT_SOURCE
file(GLOB_RECURSE NNKIT_SOURCE "*.cc")

# NNKIT_OBJECT

# NNKIT_TARGET
add_executable(${NNKIT_TARGET} ${NNKIT_SOURCE} ${NNKIT_OBJECT})

# NNKIT_DIRECTORY
set_property(TARGET ${NNKIT_TARGET} PROPERTY FOLDER ${NNKIT_DIRECTORY})

# NNKIT_DEPEND_LIBRARY

# NNKIT_SYSTEM_LIBRARY

# NNKIT_THIRD_PARTY_LIBRARY

# install
include(${ROOT_PATH}/cmake/install.cmake)

# unset
unset(NNKIT_SOURCE)
unset(NNKIT_OBJECT)
unset(NNKIT_TARGET)
unset(NNKIT_DIRECTORY)
unset(NNKIT_DEPEND_LIBRARY)
unset(NNKIT_SYSTEM_LIBRARY)
unset(NNKIT_THIRD_PARTY_LIBRARY)

