# set
set(SOURCE)
set(OBJECT)
set(BINARY nndeploy_detect)
set(DIRECTORY nndeploy_detect)
set(DEPEND_LIBRARY)
set(SYSTEM_LIBRARY)
set(THIRD_PARTY_LIBRARY)
# SOURCE
file(GLOB SOURCE
  "${ROOT_PATH}/include/nndeploy/task/detect/*.h"
  "${ROOT_PATH}/source/nndeploy/task/detect/*.cc"
  )
if (ENABLE_NNDEPLOY_OPENCV)
  file(GLOB_RECURSE OPENCV_SOURCE
    "${ROOT_PATH}/include/nndeploy/task/detect/opencv/*.h"
    "${ROOT_PATH}/source/nndeploy/task/detect/opencv/*.cc"
  )
  set(SOURCE ${SOURCE} ${OPENCV_SOURCE})
endif()
# OBJECT
# TARGET
add_library(${BINARY} ${NNDEPLOY_LIB_TYPE} ${SOURCE} ${OBJECT})
# DIRECTORY
set_property(TARGET ${BINARY} PROPERTY FOLDER ${DIRECTORY})
# DEPEND_LIBRARY
list(APPEND DEPEND_LIBRARY ${NNDEPLOY_BINARY})
list(APPEND DEPEND_LIBRARY ${NNDEPLOY_DEPEND_LIBRARY})
target_link_libraries(${BINARY} ${DEPEND_LIBRARY}) 
# SYSTEM_LIBRARY
list(APPEND SYSTEM_LIBRARY ${NNDEPLOY_SYSTEM_LIBRARY})
target_link_libraries(${BINARY} ${SYSTEM_LIBRARY}) 
# THIRD_PARTY_LIBRARY
list(APPEND THIRD_PARTY_LIBRARY ${NNDEPLOY_THIRD_PARTY_LIBRARY})
target_link_libraries(${BINARY} ${THIRD_PARTY_LIBRARY}) 
# install
install(TARGETS ${BINARY} ${NNDEPLOY_INSTALL_TYPE} DESTINATION ${NNDEPLOY_INSTALL_PATH})
# NNDEPLOY_BINARY_TASK
set(NNDEPLOY_BINARY_TASK ${BINARY} PARENT_SCOPE)
# unset
unset(SOURCE)
unset(OBJECT)
unset(BINARY)
unset(DIRECTORY)
unset(DEPEND_LIBRARY)
unset(SYSTEM_LIBRARY)
unset(THIRD_PARTY_LIBRARY)

