
# set
set(SOURCE)
set(OBJECT)
set(BINARY demo_nndeploy_yolov5)
set(DIRECTORY demo)
set(DEPEND_LIBRARY)
set(SYSTEM_LIBRARY)
set(THIRD_PARTY_LIBRARY)

# SOURCE
file(GLOB_RECURSE SOURCE
  "${ROOT_PATH}/demo/detect/yolov5/*.h"
  "${ROOT_PATH}/demo/detect/yolov5/*.cc"
)
file(GLOB DETECT_SOURCE
  "${ROOT_PATH}/demo/detect/*.h"
  "${ROOT_PATH}/demo/detect/*.cc"
)
set(SOURCE ${SOURCE} ${DETECT_SOURCE})
file(GLOB DEMO_SOURCE
  "${ROOT_PATH}/demo/*.h"
  "${ROOT_PATH}/demo/*.cc"
)
set(SOURCE ${SOURCE} ${DEMO_SOURCE})
# OBJECT
# BINARY
add_executable(${BINARY} ${SOURCE} ${SOURCE})
# DIRECTORY
set_property(TARGET ${BINARY} PROPERTY FOLDER ${DIRECTORY})
# DEPEND_LIBRARY
list(APPEND DEPEND_LIBRARY ${NNDEPLOY_BINARY})
list(APPEND DEPEND_LIBRARY ${NNDEPLOY_DEPEND_LIBRARY})
list(APPEND DEPEND_LIBRARY ${NNDEPLOY_DEPEND_LIBRARY_DEMO})
target_link_libraries(${BINARY} ${DEPEND_LIBRARY}) 
# SYSTEM_LIBRARY
list(APPEND SYSTEM_LIBRARY ${NNDEPLOY_SYSTEM_LIBRARY})
list(APPEND SYSTEM_LIBRARY ${NNDEPLOY_SYSTEM_LIBRARY_DEMO})
target_link_libraries(${BINARY} ${SYSTEM_LIBRARY}) 
# THIRD_PARTY_LIBRARY
list(APPEND THIRD_PARTY_LIBRARY ${NNDEPLOY_THIRD_PARTY_LIBRARY})
list(APPEND THIRD_PARTY_LIBRARY ${NNDEPLOY_THIRD_PARTY_LIBRARY_DEMO})
target_link_libraries(${BINARY} ${THIRD_PARTY_LIBRARY}) 
# install
install(TARGETS ${BINARY} RUNTIME DESTINATION ${NNDEPLOY_INSTALL_PATH})

# unset
unset(SOURCE)
unset(OBJECT)
unset(BINARY)
unset(DIRECTORY)
unset(DEPEND_LIBRARY)
unset(SYSTEM_LIBRARY)
unset(THIRD_PARTY_LIBRARY)