cmake_minimum_required(VERSION 3.10)

# set
set(NNDEPLOY_SOURCE)
set(NNDEPLOY_OBJECT)
set(NNDEPLOY_TARGET NNCORE_base)
set(NNDEPLOY_DIRECTORY nncore)
set(NNDEPLOY_DEPEND_LIBRARY)
set(NNDEPLOY_SYSTEM_LIBRARY)
set(NNDEPLOY_THIRD_PARTY_LIBRARY)

include_directories(${ROOT_PATH})

# NNDEPLOY_SOURCE
file(GLOB_RECURSE NNDEPLOY_SOURCE "*.cc"
                               "${ROOT_PATH}/nncore/include/base/*.h")

# NNDEPLOY_OBJECT

# NNDEPLOY_TARGET
add_library(${NNDEPLOY_TARGET} ${NNDEPLOY_BUILD_TYPE} ${NNDEPLOY_SOURCE} ${NNDEPLOY_OBJECT})

# NNDEPLOY_DIRECTORY
set_property(TARGET ${NNDEPLOY_TARGET} PROPERTY FOLDER ${NNDEPLOY_DIRECTORY})

# NNDEPLOY_DEPEND_LIBRARY

# NNDEPLOY_SYSTEM_LIBRARY

# NNDEPLOY_THIRD_PARTY_LIBRARY

# install
include(${ROOT_PATH}/cmake/install.cmake)

# unset
unset(NNDEPLOY_SOURCE)
unset(NNDEPLOY_OBJECT)
unset(NNDEPLOY_TARGET)
unset(NNDEPLOY_DIRECTORY)
unset(NNDEPLOY_DEPEND_LIBRARY)
unset(NNDEPLOY_SYSTEM_LIBRARY)
unset(NNDEPLOY_THIRD_PARTY_LIBRARY)

