cmake_minimum_required(VERSION 3.10)

# set
set(NNTASK_SOURCE_LIB)
set(NNTASK_OBJECT_LIB)
set(NNTASK_TARGET_LIB nntask_always_lib)
set(NNTASK_SOURCE_EXE)
set(NNTASK_OBJECT_EXE)
set(NNTASK_TARGET_EXE nntask_always_exe)
set(NNTASK_SOURCE_TEST)
set(NNTASK_DIRECTORY nntask)
set(NNTASK_DEPEND_LIBRARY)
set(NNTASK_SYSTEM_LIBRARY)
set(NNTASK_THIRD_PARTY_LIBRARY)

include_directories(${ROOT_PATH})

# NNTASK_SOURCE_LIB
file(GLOB_RECURSE NNTASK_SOURCE_LIB
    "${ROOT_PATH}/nntask/include/always/task.h"
    "${ROOT_PATH}/nntask/source/base/task.cc"
    )
# message(STATUS "NNTASK_SOURCE_LIB:${NNTASK_SOURCE_LIB}")

# NNTASK_OBJECT_LIB

# NNTASK_TARGET_LIB
add_library(${NNTASK_TARGET_LIB} ${NNTASK_BUILD_TYPE} ${NNTASK_SOURCE_LIB} ${NNTASK_OBJECT_LIB})

# NNTASK_DIRECTORY
set_property(TARGET ${NNTASK_TARGET} PROPERTY FOLDER ${NNTASK_DIRECTORY})

# NNTASK_DEPEND_LIBRARY

# NNTASK_SYSTEM_LIBRARY

# NNTASK_THIRD_PARTY_LIBRARY

# install

if(NNDEPLOY_ENABLE_DEMO)
  # NNTASK_SOURCE_EXE
  file(GLOB_RECURSE NNTASK_SOURCE_EXE
      "${ROOT_PATH}/nntask/source/base/demo.cc"
      )
  # message(STATUS "NNTASK_SOURCE_EXE:${NNTASK_SOURCE_EXE}")

  # NNTASK_OBJECT_EXE

  # NNTASK_TARGET_LIB
  add_executable(${NNTASK_TARGET_EXE} ${NNTASK_SOURCE_EXE} ${NNTASK_OBJECT_EXE})

  # NNTASK_DIRECTORY
  set_property(TARGET ${NNTASK_TARGET} PROPERTY FOLDER ${NNTASK_DIRECTORY})

  # NNTASK_DEPEND_LIBRARY

  # NNTASK_SYSTEM_LIBRARY

  # NNTASK_THIRD_PARTY_LIBRARY

  # install
endif()

# unset
unset(NNTASK_SOURCE_LIB)
unset(NNTASK_OBJECT_LIB)
unset(NNTASK_TARGET_LIB)
unset(NNTASK_SOURCE_EXE)
unset(NNTASK_OBJECT_EXE)
unset(NNTASK_TARGET_EXE)
unset(NNTASK_SOURCE_TEST)
unset(NNTASK_DIRECTORY)
unset(NNTASK_DEPEND_LIBRARY)
unset(NNTASK_SYSTEM_LIBRARY)
unset(NNTASK_THIRD_PARTY_LIBRARY)

