cmake_minimum_required(VERSION 3.10)

# set
set(NNTASK_SOURCE)
set(NNTASK_OBJECT)
set(NNTASK_TARGET nntask_always)
set(NNTASK_DEMO_SOURCE)
set(NNTASK_DEMO_OBJECT)
set(NNTASK_DEMO_TARGET nntask_demo_always)
set(NNTASK_TEST_SOURCE)
set(NNTASK_DIRECTORY nntask)
set(NNTASK_DEPEND_LIBRARY)
set(NNTASK_SYSTEM_LIBRARY)
set(NNTASK_THIRD_PARTY_LIBRARY)

include_directories(${ROOT_PATH})

# NNTASK_SOURCE
file(GLOB_RECURSE NNTASK_SOURCE
    "${ROOT_PATH}/nntask/include/always/task.h"
    "${ROOT_PATH}/nntask/source/always/task.cc"
    )

# NNTASK_OBJECT

# NNTASK_TARGET
add_library(${NNTASK_TARGET} ${NNTASK_BUILD_TYPE} ${NNTASK_SOURCE} ${NNTASK_OBJECT})

# NNTASK_DIRECTORY
set_property(TARGET ${NNTASK_TARGET} PROPERTY FOLDER ${NNTASK_DIRECTORY})

# NNTASK_DEPEND_LIBRARY

# NNTASK_SYSTEM_LIBRARY

# NNTASK_THIRD_PARTY_LIBRARY

# install

if(NNDEPLOY_ENABLE_DEMO)
  # NNTASK_DEMO_SOURCE
  file(GLOB_RECURSE NNTASK_DEMO_SOURCE
      "${ROOT_PATH}/nntask/source/always/demo.cc"
      )
  # message(STATUS "NNTASK_DEMO_SOURCE:${NNTASK_DEMO_SOURCE}")

  # NNTASK_DEMO_OBJECT

  # NNTASK_DEMO_TARGET
  add_executable(${NNTASK_DEMO_TARGET} ${NNTASK_DEMO_SOURCE} ${NNTASK_DEMO_OBJECT})

  # NNTASK_DIRECTORY
  set_property(TARGET ${NNTASK_DEMO_TARGET} PROPERTY FOLDER ${NNTASK_DIRECTORY})

  # NNTASK_DEPEND_LIBRARY
  
  # NNTASK_SYSTEM_LIBRARY

  # NNTASK_THIRD_PARTY_LIBRARY

  # install
endif()

if(NNDEPLOY_ENABLE_TEST)
  file(GLOB_RECURSE NNTASK_TEST_SOURCE
      "${ROOT_PATH}/nntask/source/always/test.cc"
      )
endif()

# unset
unset(NNTASK_SOURCE)
unset(NNTASK_OBJECT)
unset(NNTASK_TARGET)
unset(NNTASK_DEMO_SOURCE)
unset(NNTASK_DEMO_OBJECT)
unset(NNTASK_DEMO_TARGET)
unset(NNTASK_TEST_SOURCE)
unset(NNTASK_DIRECTORY)
unset(NNTASK_DEPEND_LIBRARY)
unset(NNTASK_SYSTEM_LIBRARY)
unset(NNTASK_THIRD_PARTY_LIBRARY)
